unpackaged/config/ready/02_Community_Transcript/objects/redu_File_Sharing_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>redu_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_ContentVersion_File_Category__c</fullName>
        <label>ContentVersion File Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unofficial Transcript</fullName>
                    <default>true</default>
                    <label>Unofficial Transcript</label>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Official Transcript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Visibility__c</fullName>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AllUsers</fullName>
                    <default>true</default>
                    <label>Visible in Community</label>
                </value>
                <value>
                    <fullName>InternalUsers</fullName>
                    <label>Not visible in Community</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>File Sharing Configuration</label>
    <pluralLabel>File Sharing Configurations</pluralLabel>
</CustomObject>